--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "dependencies": {
     "express.js": "^1.0.0",
+    "moment": "^2.29.1",
     "mongoose": "^5.11.16"
   },
   "devDependencies": {},
