--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "moment": "^2.29.1",
     "mongoose": "^5.11.16"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^2.0.7"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
